tests/algorithms/x/Scala/machine_learning/decision_tree.error
exit status 1
/workspace/mochi/tests/algorithms/x/Scala/machine_learning/decision_tree.scala:119: error: type mismatch;
 found   : Any
 required: Main.Tree
  return (tree match { case Leaf(p) => p case Branch(b, l, r) => (if (value >= b) predict(r, value) else predict(l, value)) }).toString.toDouble
                                                                                          ^
/workspace/mochi/tests/algorithms/x/Scala/machine_learning/decision_tree.scala:119: error: type mismatch;
 found   : Any
 required: Main.Tree
  return (tree match { case Leaf(p) => p case Branch(b, l, r) => (if (value >= b) predict(r, value) else predict(l, value)) }).toString.toDouble
                                                                                                                 ^
two errors found
